--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 
 .header {
     background-color: #1F2937;
-    padding: 12px;
+    padding: 1em 3em;
     border-bottom: 2px solid white;
     display: flex;
 }
@@ -43,6 +43,52 @@ nav a {
     font-size: 18px;
 }
 
-/* Main */
+/* Content-block-one */
+
+.content-block-one {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #1F2937;
+    padding: 120px 3em;
+    gap: 48px;
+}
+
+.text {
+    flex: 1;
+}
+
+.hero-main {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 1000;
+}
+
+.hero-secondary {
+    color: #E5E7EB;
+    font-size: 18px;
+    font-weight: lighter;
+    margin: 12px 0px;
+}
+
+button {
+    color: #E5E7EB;
+    background-color: #3882F6;
+    border: none;
+    font-weight: 700;
+    border-radius: 6px;
+    padding: 8px 24px
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    background-color: rgb(150, 150, 150);
+}
+
+.image-text{
+    color: #E5E7EB;
+}
 
 /* Footer */
