--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 
 .header {
     background-color: #1F2937;
-    padding: 1em 3em;
+    padding: 12px 48px;
     border-bottom: 2px solid white;
     display: flex;
 }
@@ -43,27 +43,27 @@ nav a {
     font-size: 18px;
 }
 
-/* Content-block-one */
+/* Content-hero */
 
-.content-block-one {
+.content-hero {
     display: flex;
     flex-wrap: wrap;
     background-color: #1F2937;
-    padding: 120px 3em;
+    padding: 120px 48px;
     gap: 48px;
 }
 
-.text {
-    flex: 1;
+.hero-text-block {
+    flex: 1 1 250px;
 }
 
-.hero-main {
+.hero-main-text {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: 1000;
 }
 
-.hero-secondary {
+.hero-secondary-text {
     color: #E5E7EB;
     font-size: 18px;
     font-weight: lighter;
@@ -79,15 +79,15 @@ button {
     padding: 8px 24px
 }
 
-.image {
+.hero-image-block {
     display: flex;
+    flex: 1 1 250px;
     justify-content: center;
     align-items: center;
-    flex: 1;
     background-color: rgb(150, 150, 150);
 }
 
-.image-text{
+.hero-image-text{
     color: #E5E7EB;
 }
 
