--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,14 @@
 html,
 body {
     margin: 0px;
-    padding: 0px;
+    min-height: 100vh;
     font-family: Roboto, sans-serif;
     box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
 }
 
 /* Header css */
@@ -43,11 +48,19 @@ nav a {
     font-size: 18px;
 }
 
-/* Content-hero */
+/* Body */
+
+.body {
+    display: flex;
+    flex: 1;
+
+}
 
 .content-hero {
     display: flex;
     flex-wrap: wrap;
+    justify-content: ;
+    align-items: center;
     background-color: #1F2937;
     padding: 120px 48px;
     gap: 48px;
@@ -81,14 +94,31 @@ button {
 
 .hero-image-block {
     display: flex;
-    flex: 1 1 250px;
+    flex: 1;
     justify-content: center;
     align-items: center;
     background-color: rgb(150, 150, 150);
+    /* settings to create placeholder and to be adjusted when image is added */
+    height: 250px;
+    width: 300px;
 }
 
 .hero-image-text{
     color: #E5E7EB;
+    padding: 16px;
+    text-align: center;
 }
 
 /* Footer */
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    padding: 12px 48px;
+}
+
+.footer-text {
+    color: #E5E7EB;
+}
