--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
     flex-direction: column;
 }
 
-/* Header css */
+/* Header */
 
 .header {
     background-color: #1F2937;
@@ -51,10 +51,10 @@ nav a {
 /* Body */
 
 .body {
-    display: flex;
     flex: 1;
-
 }
+
+/* Body - Hero */
 
 .content-hero {
     display: flex;
@@ -98,7 +98,7 @@ button {
     justify-content: center;
     align-items: center;
     background-color: rgb(150, 150, 150);
-    /* settings to create placeholder and to be adjusted when image is added */
+    /* placeholder settings to be adjusted when image is added */
     height: 250px;
     width: 300px;
 }
@@ -108,6 +108,12 @@ button {
     padding: 16px;
     text-align: center;
 }
+
+/* Body - Information */
+
+/* Body - Quote */
+
+/* Body - CTA */
 
 /* Footer */
 
