--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,10 @@ body {
 /* Header */
 
 .header {
+    display: flex;
     background-color: #1F2937;
     padding: 12px 48px;
     border-bottom: 2px solid white;
-    display: flex;
 }
 
 nav .logo {
@@ -51,15 +51,17 @@ nav a {
 /* Body */
 
 .body {
+    display: flex;
+    flex-direction: column;
     flex: 1;
 }
 
 /* Body - Hero */
 
-.content-hero {
+.body-hero {
     display: flex;
     flex-wrap: wrap;
-    justify-content: ;
+    justify-content: center;
     align-items: center;
     background-color: #1F2937;
     padding: 120px 48px;
@@ -110,6 +112,49 @@ button {
 }
 
 /* Body - Information */
+
+.body-information {
+    display: flex;
+    flex-direction: column;
+    padding: 60px 48px 120px 48px;
+    gap: 48px;
+}
+
+.information-title {
+    color: #1F2937;
+    text-align: center;
+    font-size: 36px;
+    font-weight: 1000;
+}
+
+.information-blocks {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+.information-block {
+    display: flex;
+    flex-direction: column;
+}
+
+.information-icon {
+    outline: 2px solid #3882F6;
+    margin-bottom: 8px;
+    border-radius: 6px;
+    height: 150px;
+    width: 150px;
+}
+
+.information-text {
+    color: #1F2937;
+    font-size: 16px;
+    font-weight: lighter;
+    text-align: center;
+    max-width: 150px;
+}
 
 /* Body - Quote */
 
