--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ nav ul {
 
 nav a {
     text-decoration: none;
-    color: #E5E7EB;
+    color: #F9FAF8;
     font-size: 18px;
 }
 
@@ -102,7 +102,7 @@ button {
 }
 
 .hero-image-text{
-    color: #E5E7EB;
+    color: #F9FAF8;
     padding: 16px;
     text-align: center;
 }
@@ -233,5 +233,5 @@ button {
 }
 
 .footer-text {
-    color: #E5E7EB;
+    color: #F9FAF8;
 }
