--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,27 @@ nav a {
     text-decoration: none;
     color: #F9FAF8;
     font-size: 18px;
+    position: relative;
 }
+
+a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: #F9FAF8;
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+  }
+  
+  a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
 
 /* Body */
 
@@ -88,6 +108,11 @@ button {
     font-weight: 700;
     border-radius: 6px;
     padding: 8px 24px
+}
+
+button:hover {
+    color: #3882F6;
+    background-color: #F9FAF8;
 }
 
 .hero-image-block {
